# kubefuzz

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  wiki.yml
contrib/: PKGBUILD  kf.rb  kf.tape  record_tour.sh  run_tapes.sh
contrib/tapes/: actions.tape  delete.tape  demo.tape  filter.tape  multicluster.tape  preview.tape  tour.tape
docs/: ARCHITECTURE.md  CONTRIBUTING.md  REMEDIATION_PART1.md  REMEDIATION_PART2.md  RESEARCH.md  ROADMAP.md  SKIM_NOTES.md  TESTING.md  kuberift-manual.tex
docs/guides/: ARCHITECTURE.md  CONTRIBUTING.md  REMEDIATION_PART1.md  REMEDIATION_PART2.md  ROADMAP.md  SKIM_NOTES.md  TESTING.md
docs/manual/: kuberift-manual.tex
src/: actions.rs  cli.rs  config.rs  items.rs  lib.rs  main.rs
src/k8s/: client.rs  discovery.rs  mod.rs  pods.rs  resources.rs
tests/: actions_test.rs  cli_integration.rs  cli_test.rs  client_test.rs  config_test.rs  items_test.rs  resources_test.rs
wiki/: Actions.md  Demo-Gallery.md  Filtering.md  Home.md  Installation.md  Keybindings.md  Multi-Cluster.md  Preview-Modes.md  Quick-Start.md  Read-Only-Mode.md
