[package]
name = "kubefuzz"
version = "0.1.0"
edition = "2021"
description = "A fuzzy-first interactive Kubernetes resource navigator"
license = "MIT"

[[bin]]
name = "kf"
path = "src/main.rs"

[dependencies]
# Fuzzy finder engine — using a git fork because crates.io 3.4.0 is broken
# with frizbee 0.8.2 (simd module became private). This fork has the fix.
# default-features = false skips the skim CLI binary.
skim = { git = "https://github.com/syedazeez337/skim", branch = "master", default-features = false }

# TUI rendering — must match skim's ratatui version
ratatui = "0.30"

# Kubernetes client
kube = { version = "3.0.1", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }

# Async runtime — only the features actually used
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Async utilities (streaming pod lists)
futures = "0.3"

# TUI input events (re-used from skim's crossterm)
crossterm = "0.29"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI args (Phase 1+)
clap = { version = "4", features = ["derive"] }

# Config file (Phase 1+)
toml = "1"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
